# gtest_boilerplate

./: CMakeLists.txt  build.sh
src/: main.cpp
